[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Sounds/SFX/ventoempurrao2.wav" type="AudioStream" id=1]
[ext_resource path="res://Assets/Scripts/PlayerController.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sounds/SFX/batida.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/Sounds/SFX/barcoruido.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/Sounds/SFX/ventoloop.wav" type="AudioStream" id=8]
[ext_resource path="res://Assets/Images/NovoPlayer/barcoZulmira01.png" type="Texture" id=14]
[ext_resource path="res://Assets/Images/NovoPlayer/barcoZulmira03.png" type="Texture" id=15]
[ext_resource path="res://Assets/Images/NovoPlayer/barcoZulmira02.png" type="Texture" id=16]

[sub_resource type="PhysicsMaterial" id=4]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 16 ), ExtResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.544444, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[node name="RigidBody2D" type="RigidBody2D" groups=[
"Player",
]]
mode = 2
physics_material_override = SubResource( 4 )
script = ExtResource( 2 )
VerticalAcelleration = 200.0
HorizontalAcelleration = 100.0
windLoopVelocity = 2500

[node name="Jangada" type="Node2D" parent="."]
scale = Vector2( 0.5, 0.5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Jangada"]
position = Vector2( 0, -94.2867 )
frames = SubResource( 5 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
scale = Vector2( 0.5, 0.5 )
polygon = PoolVector2Array( 151.092, 11.894, 78.132, 54.5475, -149.727, 42.2004, -151.972, -12.8001, 37.7234, -215.965 )

[node name="Tween" type="Tween" parent="."]

[node name="SFX" type="Node" parent="."]

[node name="Batida" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 6 )

[node name="BarcoRuido" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 7 )
volume_db = -80.0
autoplay = true

[node name="VentoLoop" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 8 )
volume_db = -80.0
autoplay = true

[node name="VentoEmpurrao" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 1 )
volume_db = 3.0

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 100
one_shot = true
explosiveness = 1.0
randomness = 0.5
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 180.0
angular_velocity = 180.0
angular_velocity_random = 1.0
orbit_velocity = 0.1
orbit_velocity_random = 1.0
radial_accel = -100.0
radial_accel_random = 1.0
scale_amount = 5.0
color_ramp = SubResource( 3 )
__meta__ = {
"_editor_description_": ""
}
